--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -1,3 +1,7 @@
+// Add tailwind directives
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @import 'base';
 @import 'mixins';
-@import 'layout';
