--- a/app/src/styles/base/Footer.module.scss
+++ b/app/src/styles/base/Footer.module.scss
@@ -1,7 +1,7 @@
-#footer-container {
+#container {
   @apply bg-slate-300 mt-4;
 }
 
 #wrapper {
-  @apply my-0 mx-auto max-w-screen-xl p-5 grid grid-cols-3 gap-4;
+  @apply my-0 mx-auto max-w-screen-xl p-5 grid grid-cols-3 gap-4 text-base;
 }
