--- a/app/src/styles/globals.scss
+++ b/app/src/styles/globals.scss
@@ -1,8 +1,8 @@
+@use "partials";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@use 'partials';
 
 @layer base {
   html,
@@ -10,9 +10,11 @@
     @apply font-body;
   }
 
-  @for $i from 1 through 6 {
-    h#{$i} {
-      @apply font-heading font-bold;
+  $font-sizes: (1 '3xl', 2 '2xl', 3 'xl', 4 'lg', 5 'base', 6 'sm');
+
+  @each $heading, $sizes in $font-sizes {
+    h#{$heading} {
+      @apply font-extrabold text-#{$sizes};
     }
   }
 }
