Might be switching to D3 i dunno

--- a/app/src/styles/base/Layout.module.scss
+++ b/app/src/styles/base/Layout.module.scss
@@ -1,10 +1,15 @@
 /**************************
- * Margin wrappers uwu
+ * Margin wrappers
  **************************/
 .content-wrapper {
-  @apply my-0 mx-auto max-w-screen-xl px-4;
+  @apply my-0 mx-auto max-w-screen-2xl;
 }
 
 #grid-container {
   @apply grid grid-cols-2;
+}
+
+.bg-stats-content {
+  @apply bg-white p-5 rounded-md;
+  box-shadow: 0 12px 24px rgba(black, 25%);
 }
