--- a/app/src/styles/base/Footer.module.scss
+++ b/app/src/styles/base/Footer.module.scss
@@ -3,5 +3,5 @@
 }
 
 #wrapper {
-  @apply my-0 mx-auto max-w-screen-xl p-5 grid grid-cols-3 gap-4 text-base;
+  @apply my-0 mx-auto max-w-screen-xl p-5 grid grid-cols-3 gap-4 text-sm;
 }
