--- a/app/src/styles/base/Layout.module.scss
+++ b/app/src/styles/base/Layout.module.scss
@@ -1,10 +1,3 @@
-/**************************
- * Margin wrappers
- **************************/
-.content-wrapper {
-  @apply my-0 mx-auto max-w-screen-2xl;
-}
-
-#grid-container {
-  @apply grid grid-cols-2;
+#wrap {
+  @apply my-0 mx-auto px-7 max-w-screen-2xl;
 }
