--- a/apps/website/src/components/Base/Navbar.module.scss
+++ b/apps/website/src/components/Base/Navbar.module.scss
@@ -1,14 +1,17 @@
+@use "@/styles/mixins" as *;
+
 .root-wrapper {
-  @apply py-4;
+  @include limit-screen();
+  @apply py-6;
 }
 
 .container {
-  @apply px-5 xl:px-10 flex justify-between items-center;
+  @apply px-8 lg:px-10 flex justify-between items-center;
 }
 
 .logo {
   &-wrapper {
-    @apply flex flex-col gap-y-0.5;
+    @apply flex flex-col gap-y-0.5 font-inter translate-y-2.5;
   }
 
   :is(&-title, &-kuroji-wordmark) {
@@ -16,11 +19,11 @@
   }
 
   &-title {
-    @apply text-2xl;
+    @apply text-3xl;
   }
 
   &-subtitle {
-    @apply text-sm;
+    @apply text-sm w-fit;
   }
 
   &-kuroji-wordmark {
@@ -29,5 +32,24 @@
 }
 
 .nav-row {
-  @apply flex gap-x-8;
+  @apply flex items-center gap-x-0.5;
+}
+
+.nav-item {
+  @apply hover:bg-gray-200 hover:text-green-800 py-1.5 px-3.5 rounded-md;
+
+  &-active {
+    @extend .nav-item;
+    @apply font-bold text-green-600 hover:text-green-600;
+  }
+}
+
+.nav-item-search {
+  @extend .nav-item;
+  @apply py-2.5 #{!important};
+}
+
+.wip-badge {
+  @apply ml-2 px-1.5 py-0.5 text-xs text-white bg-green-700 rounded-md;
+  @apply font-semibold #{!important};
 }
