--- a/apps/website/assets/css/main.scss
+++ b/apps/website/assets/css/main.scss
@@ -1,5 +1,12 @@
+@import "@fontsource/inter/400";
+@import "@fontsource/inter/700";
+@import "@fontsource/inter/800";
+@import "@fontsource/inter/900";
+@import "@fontsource/open-sans/400";
+@import "@fontsource/open-sans/700";
+@import "@fontsource/open-sans/800";
+@import "@fontsource/open-sans/800-italic";
+
 @tailwind base;
 @tailwind utilities;
 @tailwind components;
-
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
