--- a/apps/website/assets/css/main.scss
+++ b/apps/website/assets/css/main.scss
@@ -1,12 +1,4 @@
-@import "@fontsource/inter/400";
-@import "@fontsource/inter/700";
-@import "@fontsource/inter/800";
-@import "@fontsource/inter/900";
-@import "@fontsource/open-sans/400";
-@import "@fontsource/open-sans/700";
-@import "@fontsource/open-sans/800";
-@import "@fontsource/open-sans/800-italic";
-
+@use "config/fonts";
 @tailwind base;
 @tailwind utilities;
 @tailwind components;
