--- a/src/client/assets/global.css
+++ b/src/client/assets/global.css
@@ -1,6 +1,5 @@
-@import "@fontsource/inter/400.css";
+@import "@fontsource/inter";
 @import "@fontsource/inter/600.css";
-@import "@fontsource/inter/700.css";
 @import "@fontsource/inter/800.css";
 @import "@fontsource/jetbrains-mono";
 @import "@fontsource/open-sans";
