--- a/client/assets/global.css
+++ b/client/assets/global.css
@@ -6,4 +6,11 @@
 
 @tailwind base;
 @tailwind components;
+
+@layer components {
+  a.hlink {
+    @apply text-green-500 transition-colors hover:text-green-700 hover:underline;
+  }
+}
+
 @tailwind utilities;
